--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         padding-top: .75em;
         padding-bottom: .75em;
         margin-bottom: 1rem;
+        width: 100%;
       }
       header p{
         color: hsl(303, 10%, 53%);
