--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         }
       }
 
-      @media (min-width: 1000px) {
+      @media (min-width: 850px) {
         html {
           font-size: 15px;
           line-height: 1.2em;
@@ -172,11 +172,11 @@
           margin-bottom: 3em;
           margin-left: auto;
           margin-right: auto;
-          width: 70%;
+          width: 85%;
           height: 60%;
           display: flex;
           flex-direction: column;
-          max-width: unset;
+          max-width: 1000px;
           justify-content: space-between;
         }
 
